feat: desenvolvimento estrutura lgpd
